syntax = "proto3";

package core.iam;
option go_package = "github.com/CyberAgent/mimosa-core/proto/iam";

service IAMService {
  rpc Authn(AuthnRequest) returns (AuthnResponse);
  rpc Authz(AuthzRequest) returns (AuthzResponse);
}

message AuthnRequest { string token = 1; }

message AuthnResponse { User user = 1; }

message AuthzRequest {
  string user_id = 1;
  string action_ptn = 2;
  string resource_ptn = 3;
}

message AuthzResponse { bool ok = 1; }

/**
 * Userエンティティ
 */
message User {
  string user_id = 1;
  string name = 2;
  bool activated = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}
